traefik-deployment/traefik-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: traefik
  labels:
    app: traefik

spec:
  replicas: 2
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:latest
          args:
            - --api.insecure
            - --accesslog
            - --entrypoints.web.Address=:8000
            - --entrypoints.websecure.Address=:4443
            - --providers.kubernetescrd
            #- --certificatesresolvers.myresolver.acme.tlschallenge
            #- --certificatesresolvers.myresolver.acme.email=foo@you.com
            #- --certificatesresolvers.myresolver.acme.storage=acme.json
            # Please note that this is the staging Let's Encrypt server.
            # Once you get things working, you should remove that whole line altogether.
            #- --certificatesresolvers.myresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
          ports:
            - name: web
              containerPort: 8000
            - name: websecure
              containerPort: 4443
            - name: admin
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-controller
  namespace: default
spec:
  #type: NodePort
  ports:
  - name: web
    port: 8000
    targetPort: 8000
    protocol: TCP
  - name: websecure
    port: 4443
    targetPort: 4443
    protocol: TCP
  - name: admin
    port: 8080
    targetPort: 8080
    protocol: TCP
  externalIPs:
    - 192.168.0.200
    - 192.168.0.201
    - 192.168.0.202
  selector:
    app: traefik-ingress-controller
