traefik-deployment/test-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: IngressClass
metadata: 
  name: traefik-lb
spec: 
  controller: traefik.io/ingress-controller

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
spec:
  ingressClassName: "traefik-lb"
  defaultBackend:
    service:
      name: whoami 
      port:
        number: 80
